use cmsg Base64 class instead of Sun's proprietary API